# rust_wasm_webcam

./: .gitignore  .travis.yml  README.md  package.json
.run/: Wasm Pack Face.run.xml
app/: config-overrides.js  package-lock.json  package.json
app/public/: index.html  worker.js
app/rust/pkg/: index.js  package.json
app/src/: App.tsx  index.d.ts  wasm.js  worker.js
app/src/cam/: cam.module.css  cam.ts  camera.d.ts  index.tsx  worker.ts
rust/: Cargo.toml  LICENSE_MIT
rust/.cargo/: config
rust/src/: lib.rs  pool.rs
rust/tests/: web.rs
