[package]
name = "wasm_algorithms"
version = "0.1.0"
authors = ["Rich Wandell <richwandell@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
ndarray = "0.14.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.46"
rayon = "1.1.0"
rayon-core = "1.5.0"

[dependencies.web-sys]
version = "0.3.23"
features = [
    'CanvasRenderingContext2d',
    'ErrorEvent',
    'Event',
    'ImageData',
    'Navigator',
    'Window',
    'Worker',
    'DedicatedWorkerGlobalScope',
    'MessageEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3




